--- a/scss/base/_typo.scss
+++ b/scss/base/_typo.scss
@@ -7,3 +7,24 @@
     font-family: Signika;
     src: url(../assets/font/Signika-Medium.ttf);
   }
+  h1,
+h2,
+h3 {
+  font-family: DancingScript, sans-serif;
+}
+
+h1 {
+  font-size: 3.5em;
+}
+
+h2 {
+  font-size: 2.7em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+p {
+  font-size: 1.25em;
+}
