--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,28 +12,6 @@ body {
   grid-template-rows: auto 1fr auto;
 }
 
-h1,
-h2,
-h3 {
-  font-family: DancingScript, sans-serif;
-}
-
-h1 {
-  font-size: 3.5em;
-}
-
-h2 {
-  font-size: 2.7em;
-}
-
-h3 {
-  font-size: 2em;
-}
-
-p {
-  font-size: 1.25em;
-}
-
 button {
   font-size: 1em;
   font-weight: bold;
@@ -117,12 +95,6 @@ button {
 
 .catalogo h2 {
   text-align: center;
-  .nuestros-productos {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-  }
 }
 
 .nuestros-productos {
@@ -178,24 +150,22 @@ article {
   .quienes-somos .container {
     display: flex;
     justify-content: center;
-  }
-
-  .quienes-somos .text {
-    width: 50%;
-    max-width: 600px;
-    text-align: initial;
-    padding: 0px 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .quienes-somos .img-container {
-    background-image: url(../assets/img/portada.jpg);
-    background-size: cover;
-    background-position: center center;
-    height: 500px;
-    width: 600px;
+    .text {
+      width: 50%;
+      max-width: 600px;
+      text-align: initial;
+      padding: 0px 30px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    .img-container {
+      background-image: url(../assets/img/portada.jpg);
+      background-size: cover;
+      background-position: center center;
+      height: 500px;
+      width: 600px;
+    }
   }
 
   .algunos-articulos .articulos {
@@ -212,11 +182,6 @@ article {
     }
   }
 
-  .nuestros-productos {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
   .personalizacion {
     padding: 10px;
     h1 {
