--- a/scss/main.scss
+++ b/scss/main.scss
@@ -100,6 +100,7 @@ button {
 .nuestros-productos {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -180,6 +181,11 @@ article {
     .card {
       padding: 50px;
     }
+  }
+
+  .nuestros-productos {
+    display: flex;
+    flex-direction: row;
   }
 
   .personalizacion {
