--- a/scss/base/_typo.scss
+++ b/scss/base/_typo.scss
@@ -14,11 +14,14 @@ h3 {
 }
 
 h1 {
+  text-align: center;
   font-size: 3.5em;
+  padding: 20px;
 }
 
 h2 {
   font-size: 2.7em;
+  padding: 20px;
 }
 
 h3 {
@@ -26,5 +29,6 @@ h3 {
 }
 
 p {
+  font-family: Signika, sans-serif;
   font-size: 1.25em;
 }
