--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,23 +1,27 @@
 header {
-    width: 100%;
-    padding: 10px 10px;
-    nav,
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 10px 10px;
+  nav,
   p {
     font-family: Signika;
   }
-    .navbar {
-      flex-grow: inherit;
-    }
-    .navbar .navbar-toggler:focus {
-      box-shadow: none;
-    }
-    .navbar a {
-      color: #e48494;
-    }
-    .navbar .collapse li a {
-      color: #e48494;
-    }
-    .navbar .navbar-toggler {
-      border: 1px solid #e48494;
-    }
-  } 
+  .navbar {
+    flex-grow: inherit;
+  }
+  .navbar .navbar-toggler:focus {
+    box-shadow: none;
+  }
+  .navbar a {
+    color: #e48494;
+  }
+  .navbar .collapse li a {
+    color: #e48494;
+  }
+  .navbar .navbar-toggler {
+    border: 1px solid #e48494;
+  }
+}
