--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,10 @@
-@import "../scss/base/reset";
-@import "../scss/base/typo";
-@import "../scss/layout/header";
-@import "../scss/layout/footer";
-@import "../scss/layout/forms";
+@import "./base/reset";
+@import "./base/typo";
+@import "./layout/header";
+@import "./layout/footer";
+@import "./layout/forms";
+@import "./utilities/variables.scss";
+@import "./utilities/mixins.scss";
 
 body {
   background: linear-gradient(90deg, #e9ccce, #fff);
@@ -10,6 +12,10 @@ body {
   display: grid;
   min-height: 100vh;
   grid-template-rows: auto 1fr auto;
+}
+
+main {
+  @include main(1440px, 0 auto);
 }
 
 button {
@@ -31,12 +37,20 @@ button {
   justify-content: center;
   text-align: center;
   flex-direction: column;
-  height: 40vh;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .quienes-somos .container {
   text-align: center;
-  padding: 200px 12px;
+  padding: 50px 12px;
+  .img-container {
+    background-image: url(../assets/img/portada.jpg);
+    background-size: cover;
+    background-position: center center;
+    height: 500px;
+    width: 100%;
+  }
   img {
     padding: 10px;
     margin: 15px;
@@ -68,29 +82,18 @@ button {
     border-radius: 15px;
   }
   .card:first-child {
-    background-image: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-      ),
-      url(../assets/img/box-dinosaurio.png);
+    background-image: $background-image-gradient, url(../assets/img/box-dinosaurio.png);
   }
   .card:nth-child(2) {
-    background-image: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-      ),
-      url(../assets/img/box-sirena.png);
+    background-image: $background-image-gradient, url(../assets/img/box-sirena.png);
   }
   .card:last-child {
-    background-image: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-      ),
-      url(../assets/img/box-unicornio.png);
+    background-image: $background-image-gradient, url(../assets/img/box-unicornio.png);
   }
+}
+
+.alejandro {
+  text-align: right;
 }
 
 .catalogo h2 {
@@ -107,7 +110,8 @@ button {
 
 article {
   width: 300px;
-  background-color: #e48494;
+  height: 600px;
+  background-color: $background-color;
   border-radius: 20px;
   margin: 20px 20px;
   img {
@@ -125,24 +129,19 @@ article {
 }
 
 .personalizacion {
-  max-width: 1400px;
-  margin: 0 auto;
   padding: 20px;
   h1 {
-    font-size: 32px;
     font-weight: bold;
     color: #333;
     margin-bottom: 20px;
   }
   h2 {
-    font-size: 24px;
     font-weight: bold;
     color: #333;
     margin-top: 40px;
     margin-bottom: 10px;
   }
   p {
-    font-size: 16px;
     margin-bottom: 20px;
   }
 }
@@ -159,13 +158,6 @@ article {
       display: flex;
       flex-direction: column;
       justify-content: center;
-    }
-    .img-container {
-      background-image: url(../assets/img/portada.jpg);
-      background-size: cover;
-      background-position: center center;
-      height: 500px;
-      width: 600px;
     }
   }
 
