--- a/css/main.css
+++ b/css/main.css
@@ -83,9 +83,6 @@ footer p {
   text-align: center;
 }
 
-form {
-  width: 100%;
-}
 form label {
   font-family: Signika;
   font-size: 20px;
@@ -242,6 +239,19 @@ article p {
 }
 .personalizacion p {
   margin-bottom: 20px;
+}
+
+.form-control {
+  width: 1440px;
+  height: auto;
+}
+
+.map {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
