--- a/scss/main.scss
+++ b/scss/main.scss
@@ -146,6 +146,19 @@ article {
   }
 }
 
+.form-control {
+  width: 1440px;
+  height: auto;
+}
+
+.map {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (min-width: 768px) {
   .quienes-somos .container {
     display: flex;
