--- a/css/main.css
+++ b/css/main.css
@@ -241,14 +241,7 @@ article p {
   margin-bottom: 20px;
 }
 
-.form-control {
-  width: auto;
-  height: auto;
-}
-
 .map {
-  width: auto;
-  height: auto;
   margin-top: 50px;
   margin-bottom: 50px;
   display: flex;
@@ -302,5 +295,8 @@ article p {
   .personalizacion p {
     font-size: 14px;
     margin-bottom: 10px;
+  }
+  .map {
+    width: 100%;
   }
 }/*# sourceMappingURL=main.css.map */
